Fix line breaks on Safari
Otherwise long links without dashes are not broken and go out of bounds.

--- a/style.css
+++ b/style.css
@@ -191,6 +191,7 @@ input[type="checkbox"]:checked::before {
     padding: 10px;
     margin-bottom: 20px;
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    word-break: break-word;
 
     gap: 5px;
 }
